--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,20 @@
     "zod": "^3.24.1",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.6.0",
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-badge": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.0.4",
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
@@ -29,6 +42,7 @@
     "postcss": "^8.4.49",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.0"
+    "eslint-config-next": "^15.1.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
