fix: Docker Compose build and health check issues
- Enable CGO for SQLite support in Dockerfile (go-sqlite3 requires it)
- Install gcc and musl-dev for CGO compilation
- Fix health check path from /api/v1/health to /health
- Add @monaco-editor/react dependency for config editor
- Create web/public directory for Next.js build
- Remove obsolete 'version' attribute from docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   # Hub API Server
   hub:
@@ -20,11 +18,11 @@ services:
     volumes:
       - hub-data:/data
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/api/v1/health"]
-      interval: 30s
+      test: ["CMD", "wget", "-qO-", "http://localhost:8080/health"]
+      interval: 10s
       timeout: 3s
       retries: 3
-      start_period: 5s
+      start_period: 10s
     restart: unless-stopped
 
   # Web UI
